--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
-DATABASE_URL=postgresql://postgres:OuRmJJiqSEaBtLBj@db.pwasjjlmfiqqogsdkvxz.supabase.co:5432/postgres
+DATABASE_URL="postgresql://postgres.pwasjjlmfiqqogsdkvxz:OuRmJJiqSEaBtLBj@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
+
