--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint-fix": "eslint . --fix",
-    "format:fix": "prettier --write \"src/**/*.ts\""
+    "format:fix": "prettier --write \"src/**/*.ts\"",
+    "db:generate": "drizzle-kit generate --config=src/config/drizzle.config.ts",
+    "db:migrate": "drizzle-kit migrate --config=src/config/drizzle.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,6 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.5.0",
-    "drizzle-kit": "^0.31.0",
     "drizzle-orm": "^0.36.0",
     "express": "^5.1.0",
     "pg": "^8.14.1",
@@ -26,6 +27,7 @@
     "@eslint/js": "^9.24.0",
     "@types/express": "^5.0.1",
     "@types/pg": "^8.11.13",
+    "drizzle-kit": "^0.27.1",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
