--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.36.0",
     "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.14.1",
+    "unsplash-js": "^7.0.19",
     "zod": "^3.24.2"
   },
   "devDependencies": {
