--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.36.0",
+    "drizzle-zod": "^0.7.1",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
     "pg": "^8.14.1",
