--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.36.0",
     "drizzle-zod": "^0.7.1",
