--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format:fix": "prettier --write \"src/**/*.{ts,tsx}\"",
     "preview": "vite preview",
     "generate-api": "openapi-generator-cli generate"
   },
@@ -22,6 +23,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.503.0",
+    "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
